[package]
name = "liqour"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "liqour"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = [
  "postgres", "runtime-tokio-native-tls",
  "uuid", "chrono", "rust_decimal", "json"
] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Auth / Crypto
jsonwebtoken = "9"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
solana-sdk = "2"
bincode = "1"
sha2 = "0.10"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-float"] }
rust_decimal_macros = "1"
anyhow = "1"
thiserror = "1"
dashmap = "6"
rand = "0.8"
dotenv = "0.15"

# HTTP client (for Pyth)
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
